--- a/Database/Targets/check.ipynb
+++ b/Database/Targets/check.ipynb
@@ -286,6 +286,7 @@
     }
    ],
    "source": [
+     "# Download file on the BDIFF website : https://bdiff.agriculture.gouv.fr/. Select "Diffuser" then on "Ajouter un critère" select "Localisation" (Departement). We use data between 2017-06-12 and 2023-12-31"
     "file = pd.read_csv('path_to_bdiff/Incendies.csv')\n",
     "file['date'] = file['Date de première alerte'].apply(lambda x : x.split(' ')[0])\n",
     "file['month'] = file['date'].apply(lambda x : str(x.split('-')[1]))\n",
