--- a/Database/Targets/check_datacube.ipynb
+++ b/Database/Targets/check_datacube.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from tools_functions import *\n",
     "\n",
-    "path_to_target_datacube = Path('/media/caron/X9 Pro1/travaille/Thèse/Model/HexagonalScale/ST-GNN-for-wildifre-prediction/Prediction/Target/firepoint/bdiff/datacube/departement-13-bouches-du-rhone/2x2')\n",
+    "path_to_target_datacube = Path('path_to_target_datacube/departement-13-bouches-du-rhone/2x2')\n",
     "\n",
     "datacube = read_object('datacube.pkl', path_to_target_datacube)"
    ]
